Add some changes

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
     </div>
     </div>
 
+  <div id="js-alert" class="alert hidden">
+    <button id="js-alert-close">X</button>
+    <p id="js-alert-text">test</p>
+  </div>
+
   <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
