--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Tablica kanban</title>
   <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
 </head>
 <body>
   <div id="board" class="board">
